Carbon-Haskell/src/Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from Parser.y
-----------------------------------------------------------------------------

state 99 contains 1 shift/reduce conflicts.

terminal '&' is unused
terminal '|' is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parse -> Statement                          (0)
	Statement -> Expr ';'                              (1)
	Statement -> let var '=' Expr ';'                  (2)
	Statement -> const var '=' Expr ';'                (3)
	Statement -> Type var '=' Expr ';'                 (4)
	Statement -> fn var '(' ParamList ')' '{' StmtList '}'   (5)
	Statement -> fn var '(' ParamList ')' '=>' Type '{' StmtList '}'   (6)
	Statement -> class cname '{' ClassMembers '}'      (7)
	Statement -> for ForBody                           (8)
	Statement -> var '+=' Expr ';'                     (9)
	Statement -> var '-=' Expr ';'                     (10)
	Statement -> var '*=' Expr ';'                     (11)
	Statement -> var '/=' Expr ';'                     (12)
	Statement -> var '%=' Expr ';'                     (13)
	Statement -> var '++' ';'                          (14)
	Statement -> var '--' ';'                          (15)
	Statement -> return Expr ';'                       (16)
	ExprList ->                                        (17)
	ExprList -> Expr                                   (18)
	ExprList -> Expr ',' ExprList                      (19)
	Type -> intType                                    (20)
	Type -> boolType                                   (21)
	Type -> stringType                                 (22)
	Type -> Type '[' ']'                               (23)
	ParamList ->                                       (24)
	ParamList -> Param                                 (25)
	ParamList -> Param ',' ParamList                   (26)
	Param -> Type var                                  (27)
	ForBody -> var in Expr '{' StmtList '}'            (28)
	ForBody -> Expr '{' StmtList '}'                   (29)
	ForExprBody -> var in Expr '{' Expr '}'            (30)
	ForExprBody -> Expr '{' Expr '}'                   (31)
	StmtList ->                                        (32)
	StmtList -> Statement StmtList                     (33)
	ClassMembers ->                                    (34)
	ClassMembers -> ClassMember ClassMembers           (35)
	ClassMember -> var ';'                             (36)
	ClassMember -> var '(' var ')' '{' return Expr '}'   (37)
	Expr -> int                                        (38)
	Expr -> real                                       (39)
	Expr -> E                                          (40)
	Expr -> PHI                                        (41)
	Expr -> PI                                         (42)
	Expr -> AVOGADRO                                   (43)
	Expr -> true                                       (44)
	Expr -> false                                      (45)
	Expr -> null                                       (46)
	Expr -> string                                     (47)
	Expr -> var                                        (48)
	Expr -> '(' Expr ')'                               (49)
	Expr -> '!' Expr                                   (50)
	Expr -> 'Math.sqrt' '(' Expr ')'                   (51)
	Expr -> '-' Expr                                   (52)
	Expr -> Expr '+' Expr                              (53)
	Expr -> Expr '-' Expr                              (54)
	Expr -> Expr '*' Expr                              (55)
	Expr -> Expr '/' Expr                              (56)
	Expr -> Expr '**' Expr                             (57)
	Expr -> Expr '%' Expr                              (58)
	Expr -> Expr '==' Expr                             (59)
	Expr -> Expr '!=' Expr                             (60)
	Expr -> Expr '>' Expr                              (61)
	Expr -> Expr '<' Expr                              (62)
	Expr -> Expr '&&' Expr                             (63)
	Expr -> Expr '||' Expr                             (64)
	Expr -> Expr '<=' Expr                             (65)
	Expr -> Expr '>=' Expr                             (66)
	Expr -> if Expr '{' Expr '}' else '{' Expr '}'     (67)
	Expr -> Expr '?' Expr ':' Expr                     (68)
	Expr -> for ForExprBody                            (69)
	Expr -> toString '(' Expr ')'                      (70)
	Expr -> typeof '(' Expr ')'                        (71)
	Expr -> '[' ExprList ']'                           (72)
	Expr -> var '=>' Expr                              (73)
	Expr -> function '(' var ')' '{' return Expr '}'   (74)
	Expr -> Expr '(' Expr ')'                          (75)
	Expr -> while '(' Expr ')' '{' Expr '}'            (76)
	Expr -> new cname '(' ExprList ')'                 (77)
	Expr -> Expr '.' var '(' Expr ')'                  (78)
	Expr -> Expr '.' var                               (79)
	Expr -> Expr '.' len                               (80)
	Expr -> print '(' Expr ')'                         (81)
	Expr -> match Expr '{' MatchCases '}'              (82)
	Expr -> err '(' string ')'                         (83)
	Expr -> '(' Expr ',' ExprList ')'                  (84)
	Expr -> isErr '(' Expr ')'                         (85)
	Expr -> this                                       (86)
	MatchCases -> MatchCase                            (87)
	MatchCases -> MatchCase ',' MatchCases             (88)
	MatchCase -> Pattern '=>' Expr                     (89)
	Pattern -> int                                     (90)
	Pattern -> real                                    (91)
	Pattern -> true                                    (92)
	Pattern -> false                                   (93)
	Pattern -> string                                  (94)
	Pattern -> null                                    (95)
	Pattern -> var                                     (96)
	Pattern -> '_'                                     (97)
	Pattern -> '[' PatternList ']'                     (98)
	Pattern -> '(' Pattern ')'                         (99)
	PatternList ->                                     (100)
	PatternList -> Pattern                             (101)
	PatternList -> Pattern ',' PatternList             (102)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	int            { IntTok $$ }
	real           { RealTok $$ }
	E              { ETok }
	PI             { PiTok }
	PHI            { PhiTok }
	AVOGADRO       { AvogadroTok }
	'+'            { PlusTok }
	'-'            { MinusTok }
	'*'            { MultTok }
	'/'            { DivTok }
	'+='           { PlusEqTok }
	'-='           { MinusEqTok }
	'*='           { MultEqTok }
	'/='           { DivEqTok }
	'%='           { ModEqTok }
	'--'           { DecrementTok }
	'('            { LParenTok }
	')'            { RParenTok }
	'!'            { NotTok }
	'%'            { ModTok }
	'=='           { EqTok }
	'**'           { ExpTok }
	'>'            { GTTok }
	'<'            { LTTok }
	'<='           { LeqTok }
	'>='           { GeqTok }
	'!='           { NeqTok }
	'Math.sqrt'    { MathSqrtTok }
	true           { TrueTok }
	false          { FalseTok }
	null           { NullTok }
	var            { VarTok $$ }
	string         { StringTok $$ }
	if             { IfTok }
	else           { ElseTok }
	let            { LetTok }
	const          { ConstTok }
	for            { ForTok }
	'='            { AssignTok }
	'&&'           { AndTok }
	'||'           { OrTok }
	';'            { SemicolonTok }
	fn             { FnTok }
	function       { FunctionTok }
	'=>'           { ArrowTok }
	toString       { ToStringTok }
	typeof         { TypeOfTok }
	print          { PrintTok }
	intType        { IntTypeTok }
	boolType       { BoolTypeTok }
	stringType     { StringTypeTok }
	in             { InTok }
	len            { LenTok }
	','            { CommaTok }
	return         { ReturnTok }
	'&'            { RefTok }
	while          { WhileTok }
	match          { MatchTok }
	'|'            { PipeTok }
	'_'            { WildcardTok }
	cname          { CnameTok $$ }
	class          { ClassTok }
	new            { NewTok }
	this           { ThisTok }
	'.'            { DotTok }
	'{'            { LBraceTok }
	'}'            { RBraceTok }
	'['            { LBracketTok }
	']'            { RBracketTok }
	'?'            { QuestionTok }
	':'            { ColonTok }
	'++'           { IncrementTok }
	err            { ErrTok }
	isErr          { IsErrTok }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parse    rule  0
	Statement       rules 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16
	ExprList        rules 17, 18, 19
	Type            rules 20, 21, 22, 23
	ParamList       rules 24, 25, 26
	Param           rule  27
	ForBody         rules 28, 29
	ForExprBody     rules 30, 31
	StmtList        rules 32, 33
	ClassMembers    rules 34, 35
	ClassMember     rules 36, 37
	Expr            rules 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86
	MatchCases      rules 87, 88
	MatchCase       rule  89
	Pattern         rules 90, 91, 92, 93, 94, 95, 96, 97, 98, 99
	PatternList     rules 100, 101, 102

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parse -> . Statement                         (rule 0)

	int            shift, and enter state 3
	real           shift, and enter state 4
	E              shift, and enter state 5
	PI             shift, and enter state 6
	PHI            shift, and enter state 7
	AVOGADRO       shift, and enter state 8
	'-'            shift, and enter state 9
	'('            shift, and enter state 10
	'!'            shift, and enter state 11
	'Math.sqrt'    shift, and enter state 12
	true           shift, and enter state 13
	false          shift, and enter state 14
	null           shift, and enter state 15
	var            shift, and enter state 33
	string         shift, and enter state 17
	if             shift, and enter state 18
	let            shift, and enter state 34
	const          shift, and enter state 35
	for            shift, and enter state 36
	fn             shift, and enter state 37
	function       shift, and enter state 20
	toString       shift, and enter state 21
	typeof         shift, and enter state 22
	print          shift, and enter state 23
	intType        shift, and enter state 38
	boolType       shift, and enter state 39
	stringType     shift, and enter state 40
	return         shift, and enter state 41
	while          shift, and enter state 24
	match          shift, and enter state 25
	class          shift, and enter state 42
	new            shift, and enter state 26
	this           shift, and enter state 27
	'['            shift, and enter state 28
	err            shift, and enter state 29
	isErr          shift, and enter state 30

	Statement      goto state 31
	Type           goto state 32
	Expr           goto state 2

State 1

	Statement -> . Expr ';'                             (rule 1)

	int            shift, and enter state 3
	real           shift, and enter state 4
	E              shift, and enter state 5
	PI             shift, and enter state 6
	PHI            shift, and enter state 7
	AVOGADRO       shift, and enter state 8
	'-'            shift, and enter state 9
	'('            shift, and enter state 10
	'!'            shift, and enter state 11
	'Math.sqrt'    shift, and enter state 12
	true           shift, and enter state 13
	false          shift, and enter state 14
	null           shift, and enter state 15
	var            shift, and enter state 16
	string         shift, and enter state 17
	if             shift, and enter state 18
	for            shift, and enter state 19
	function       shift, and enter state 20
	toString       shift, and enter state 21
	typeof         shift, and enter state 22
	print          shift, and enter state 23
	while          shift, and enter state 24
	match          shift, and enter state 25
	new            shift, and enter state 26
	this           shift, and enter state 27
	'['            shift, and enter state 28
	err            shift, and enter state 29
	isErr          shift, and enter state 30

	Expr           goto state 2

State 2

	Statement -> Expr . ';'                             (rule 1)
	Expr -> Expr . '+' Expr                             (rule 53)
	Expr -> Expr . '-' Expr                             (rule 54)
	Expr -> Expr . '*' Expr                             (rule 55)
	Expr -> Expr . '/' Expr                             (rule 56)
	Expr -> Expr . '**' Expr                            (rule 57)
	Expr -> Expr . '%' Expr                             (rule 58)
	Expr -> Expr . '==' Expr                            (rule 59)
	Expr -> Expr . '!=' Expr                            (rule 60)
	Expr -> Expr . '>' Expr                             (rule 61)
	Expr -> Expr . '<' Expr                             (rule 62)
	Expr -> Expr . '&&' Expr                            (rule 63)
	Expr -> Expr . '||' Expr                            (rule 64)
	Expr -> Expr . '<=' Expr                            (rule 65)
	Expr -> Expr . '>=' Expr                            (rule 66)
	Expr -> Expr . '?' Expr ':' Expr                    (rule 68)
	Expr -> Expr . '(' Expr ')'                         (rule 75)
	Expr -> Expr . '.' var '(' Expr ')'                 (rule 78)
	Expr -> Expr . '.' var                              (rule 79)
	Expr -> Expr . '.' len                              (rule 80)

	'+'            shift, and enter state 80
	'-'            shift, and enter state 81
	'*'            shift, and enter state 82
	'/'            shift, and enter state 83
	'('            shift, and enter state 84
	'%'            shift, and enter state 85
	'=='           shift, and enter state 86
	'**'           shift, and enter state 87
	'>'            shift, and enter state 88
	'<'            shift, and enter state 89
	'<='           shift, and enter state 90
	'>='           shift, and enter state 91
	'!='           shift, and enter state 92
	'&&'           shift, and enter state 93
	'||'           shift, and enter state 94
	';'            shift, and enter state 95
	'.'            shift, and enter state 96
	'?'            shift, and enter state 97


State 3

	Expr -> int .                                       (rule 38)

	'+'            reduce using rule 38
	'-'            reduce using rule 38
	'*'            reduce using rule 38
	'/'            reduce using rule 38
	'('            reduce using rule 38
	')'            reduce using rule 38
	'%'            reduce using rule 38
	'=='           reduce using rule 38
	'**'           reduce using rule 38
	'>'            reduce using rule 38
	'<'            reduce using rule 38
	'<='           reduce using rule 38
	'>='           reduce using rule 38
	'!='           reduce using rule 38
	'&&'           reduce using rule 38
	'||'           reduce using rule 38
	';'            reduce using rule 38
	','            reduce using rule 38
	'.'            reduce using rule 38
	'{'            reduce using rule 38
	'}'            reduce using rule 38
	']'            reduce using rule 38
	'?'            reduce using rule 38
	':'            reduce using rule 38


State 4

	Expr -> real .                                      (rule 39)

	'+'            reduce using rule 39
	'-'            reduce using rule 39
	'*'            reduce using rule 39
	'/'            reduce using rule 39
	'('            reduce using rule 39
	')'            reduce using rule 39
	'%'            reduce using rule 39
	'=='           reduce using rule 39
	'**'           reduce using rule 39
	'>'            reduce using rule 39
	'<'            reduce using rule 39
	'<='           reduce using rule 39
	'>='           reduce using rule 39
	'!='           reduce using rule 39
	'&&'           reduce using rule 39
	'||'           reduce using rule 39
	';'            reduce using rule 39
	','            reduce using rule 39
	'.'            reduce using rule 39
	'{'            reduce using rule 39
	'}'            reduce using rule 39
	']'            reduce using rule 39
	'?'            reduce using rule 39
	':'            reduce using rule 39


State 5

	Expr -> E .                                         (rule 40)

	'+'            reduce using rule 40
	'-'            reduce using rule 40
	'*'            reduce using rule 40
	'/'            reduce using rule 40
	'('            reduce using rule 40
	')'            reduce using rule 40
	'%'            reduce using rule 40
	'=='           reduce using rule 40
	'**'           reduce using rule 40
	'>'            reduce using rule 40
	'<'            reduce using rule 40
	'<='           reduce using rule 40
	'>='           reduce using rule 40
	'!='           reduce using rule 40
	'&&'           reduce using rule 40
	'||'           reduce using rule 40
	';'            reduce using rule 40
	','            reduce using rule 40
	'.'            reduce using rule 40
	'{'            reduce using rule 40
	'}'            reduce using rule 40
	']'            reduce using rule 40
	'?'            reduce using rule 40
	':'            reduce using rule 40


State 6

	Expr -> PI .                                        (rule 42)

	'+'            reduce using rule 42
	'-'            reduce using rule 42
	'*'            reduce using rule 42
	'/'            reduce using rule 42
	'('            reduce using rule 42
	')'            reduce using rule 42
	'%'            reduce using rule 42
	'=='           reduce using rule 42
	'**'           reduce using rule 42
	'>'            reduce using rule 42
	'<'            reduce using rule 42
	'<='           reduce using rule 42
	'>='           reduce using rule 42
	'!='           reduce using rule 42
	'&&'           reduce using rule 42
	'||'           reduce using rule 42
	';'            reduce using rule 42
	','            reduce using rule 42
	'.'            reduce using rule 42
	'{'            reduce using rule 42
	'}'            reduce using rule 42
	']'            reduce using rule 42
	'?'            reduce using rule 42
	':'            reduce using rule 42


State 7

	Expr -> PHI .                                       (rule 41)

	'+'            reduce using rule 41
	'-'            reduce using rule 41
	'*'            reduce using rule 41
	'/'            reduce using rule 41
	'('            reduce using rule 41
	')'            reduce using rule 41
	'%'            reduce using rule 41
	'=='           reduce using rule 41
	'**'           reduce using rule 41
	'>'            reduce using rule 41
	'<'            reduce using rule 41
	'<='           reduce using rule 41
	'>='           reduce using rule 41
	'!='           reduce using rule 41
	'&&'           reduce using rule 41
	'||'           reduce using rule 41
	';'            reduce using rule 41
	','            reduce using rule 41
	'.'            reduce using rule 41
	'{'            reduce using rule 41
	'}'            reduce using rule 41
	']'            reduce using rule 41
	'?'            reduce using rule 41
	':'            reduce using rule 41


State 8

	Expr -> AVOGADRO .                                  (rule 43)

	'+'            reduce using rule 43
	'-'            reduce using rule 43
	'*'            reduce using rule 43
	'/'            reduce using rule 43
	'('            reduce using rule 43
	')'            reduce using rule 43
	'%'            reduce using rule 43
	'=='           reduce using rule 43
	'**'           reduce using rule 43
	'>'            reduce using rule 43
	'<'            reduce using rule 43
	'<='           reduce using rule 43
	'>='           reduce using rule 43
	'!='           reduce using rule 43
	'&&'           reduce using rule 43
	'||'           reduce using rule 43
	';'            reduce using rule 43
	','            reduce using rule 43
	'.'            reduce using rule 43
	'{'            reduce using rule 43
	'}'            reduce using rule 43
	']'            reduce using rule 43
	'?'            reduce using rule 43
	':'            reduce using rule 43


State 9

	Expr -> '-' . Expr                                  (rule 52)

	int            shift, and enter state 3
	real           shift, and enter state 4
	E              shift, and enter state 5
	PI             shift, and enter state 6
	PHI            shift, and enter state 7
	AVOGADRO       shift, and enter state 8
	'-'            shift, and enter state 9
	'('            shift, and enter state 10
	'!'            shift, and enter state 11
	'Math.sqrt'    shift, and enter state 12
	true           shift, and enter state 13
	false          shift, and enter state 14
	null           shift, and enter state 15
	var            shift, and enter state 16
	string         shift, and enter state 17
	if             shift, and enter state 18
	for            shift, and enter state 19
	function       shift, and enter state 20
	toString       shift, and enter state 21
	typeof         shift, and enter state 22
	print          shift, and enter state 23
	while          shift, and enter state 24
	match          shift, and enter state 25
	new            shift, and enter state 26
	this           shift, and enter state 27
	'['            shift, and enter state 28
	err            shift, and enter state 29
	isErr          shift, and enter state 30

	Expr           goto state 79

State 10

	Expr -> '(' . Expr ')'                              (rule 49)
	Expr -> '(' . Expr ',' ExprList ')'                 (rule 84)

	int            shift, and enter state 3
	real           shift, and enter state 4
	E              shift, and enter state 5
	PI             shift, and enter state 6
	PHI            shift, and enter state 7
	AVOGADRO       shift, and enter state 8
	'-'            shift, and enter state 9
	'('            shift, and enter state 10
	'!'            shift, and enter state 11
	'Math.sqrt'    shift, and enter state 12
	true           shift, and enter state 13
	false          shift, and enter state 14
	null           shift, and enter state 15
	var            shift, and enter state 16
	string         shift, and enter state 17
	if             shift, and enter state 18
	for            shift, and enter state 19
	function       shift, and enter state 20
	toString       shift, and enter state 21
	typeof         shift, and enter state 22
	print          shift, and enter state 23
	while          shift, and enter state 24
	match          shift, and enter state 25
	new            shift, and enter state 26
	this           shift, and enter state 27
	'['            shift, and enter state 28
	err            shift, and enter state 29
	isErr          shift, and enter state 30

	Expr           goto state 78

State 11

	Expr -> '!' . Expr                                  (rule 50)

	int            shift, and enter state 3
	real           shift, and enter state 4
	E              shift, and enter state 5
	PI             shift, and enter state 6
	PHI            shift, and enter state 7
	AVOGADRO       shift, and enter state 8
	'-'            shift, and enter state 9
	'('            shift, and enter state 10
	'!'            shift, and enter state 11
	'Math.sqrt'    shift, and enter state 12
	true           shift, and enter state 13
	false          shift, and enter state 14
	null           shift, and enter state 15
	var            shift, and enter state 16
	string         shift, and enter state 17
	if             shift, and enter state 18
	for            shift, and enter state 19
	function       shift, and enter state 20
	toString       shift, and enter state 21
	typeof         shift, and enter state 22
	print          shift, and enter state 23
	while          shift, and enter state 24
	match          shift, and enter state 25
	new            shift, and enter state 26
	this           shift, and enter state 27
	'['            shift, and enter state 28
	err            shift, and enter state 29
	isErr          shift, and enter state 30

	Expr           goto state 77

State 12

	Expr -> 'Math.sqrt' . '(' Expr ')'                  (rule 51)

	'('            shift, and enter state 76


State 13

	Expr -> true .                                      (rule 44)

	'+'            reduce using rule 44
	'-'            reduce using rule 44
	'*'            reduce using rule 44
	'/'            reduce using rule 44
	'('            reduce using rule 44
	')'            reduce using rule 44
	'%'            reduce using rule 44
	'=='           reduce using rule 44
	'**'           reduce using rule 44
	'>'            reduce using rule 44
	'<'            reduce using rule 44
	'<='           reduce using rule 44
	'>='           reduce using rule 44
	'!='           reduce using rule 44
	'&&'           reduce using rule 44
	'||'           reduce using rule 44
	';'            reduce using rule 44
	','            reduce using rule 44
	'.'            reduce using rule 44
	'{'            reduce using rule 44
	'}'            reduce using rule 44
	']'            reduce using rule 44
	'?'            reduce using rule 44
	':'            reduce using rule 44


State 14

	Expr -> false .                                     (rule 45)

	'+'            reduce using rule 45
	'-'            reduce using rule 45
	'*'            reduce using rule 45
	'/'            reduce using rule 45
	'('            reduce using rule 45
	')'            reduce using rule 45
	'%'            reduce using rule 45
	'=='           reduce using rule 45
	'**'           reduce using rule 45
	'>'            reduce using rule 45
	'<'            reduce using rule 45
	'<='           reduce using rule 45
	'>='           reduce using rule 45
	'!='           reduce using rule 45
	'&&'           reduce using rule 45
	'||'           reduce using rule 45
	';'            reduce using rule 45
	','            reduce using rule 45
	'.'            reduce using rule 45
	'{'            reduce using rule 45
	'}'            reduce using rule 45
	']'            reduce using rule 45
	'?'            reduce using rule 45
	':'            reduce using rule 45


State 15

	Expr -> null .                                      (rule 46)

	'+'            reduce using rule 46
	'-'            reduce using rule 46
	'*'            reduce using rule 46
	'/'            reduce using rule 46
	'('            reduce using rule 46
	')'            reduce using rule 46
	'%'            reduce using rule 46
	'=='           reduce using rule 46
	'**'           reduce using rule 46
	'>'            reduce using rule 46
	'<'            reduce using rule 46
	'<='           reduce using rule 46
	'>='           reduce using rule 46
	'!='           reduce using rule 46
	'&&'           reduce using rule 46
	'||'           reduce using rule 46
	';'            reduce using rule 46
	','            reduce using rule 46
	'.'            reduce using rule 46
	'{'            reduce using rule 46
	'}'            reduce using rule 46
	']'            reduce using rule 46
	'?'            reduce using rule 46
	':'            reduce using rule 46


State 16

	Expr -> var .                                       (rule 48)
	Expr -> var . '=>' Expr                             (rule 73)

	'+'            reduce using rule 48
	'-'            reduce using rule 48
	'*'            reduce using rule 48
	'/'            reduce using rule 48
	'('            reduce using rule 48
	')'            reduce using rule 48
	'%'            reduce using rule 48
	'=='           reduce using rule 48
	'**'           reduce using rule 48
	'>'            reduce using rule 48
	'<'            reduce using rule 48
	'<='           reduce using rule 48
	'>='           reduce using rule 48
	'!='           reduce using rule 48
	'&&'           reduce using rule 48
	'||'           reduce using rule 48
	';'            reduce using rule 48
	'=>'           shift, and enter state 58
	','            reduce using rule 48
	'.'            reduce using rule 48
	'{'            reduce using rule 48
	'}'            reduce using rule 48
	']'            reduce using rule 48
	'?'            reduce using rule 48
	':'            reduce using rule 48


State 17

	Expr -> string .                                    (rule 47)

	'+'            reduce using rule 47
	'-'            reduce using rule 47
	'*'            reduce using rule 47
	'/'            reduce using rule 47
	'('            reduce using rule 47
	')'            reduce using rule 47
	'%'            reduce using rule 47
	'=='           reduce using rule 47
	'**'           reduce using rule 47
	'>'            reduce using rule 47
	'<'            reduce using rule 47
	'<='           reduce using rule 47
	'>='           reduce using rule 47
	'!='           reduce using rule 47
	'&&'           reduce using rule 47
	'||'           reduce using rule 47
	';'            reduce using rule 47
	','            reduce using rule 47
	'.'            reduce using rule 47
	'{'            reduce using rule 47
	'}'            reduce using rule 47
	']'            reduce using rule 47
	'?'            reduce using rule 47
	':'            reduce using rule 47


State 18

	Expr -> if . Expr '{' Expr '}' else '{' Expr '}'    (rule 67)

	int            shift, and enter state 3
	real           shift, and enter state 4
	E              shift, and enter state 5
	PI             shift, and enter state 6
	PHI            shift, and enter state 7
	AVOGADRO       shift, and enter state 8
	'-'            shift, and enter state 9
	'('            shift, and enter state 10
	'!'            shift, and enter state 11
	'Math.sqrt'    shift, and enter state 12
	true           shift, and enter state 13
	false          shift, and enter state 14
	null           shift, and enter state 15
	var            shift, and enter state 16
	string         shift, and enter state 17
	if             shift, and enter state 18
	for            shift, and enter state 19
	function       shift, and enter state 20
	toString       shift, and enter state 21
	typeof         shift, and enter state 22
	print          shift, and enter state 23
	while          shift, and enter state 24
	match          shift, and enter state 25
	new            shift, and enter state 26
	this           shift, and enter state 27
	'['            shift, and enter state 28
	err            shift, and enter state 29
	isErr          shift, and enter state 30

	Expr           goto state 75

State 19

	Expr -> for . ForExprBody                           (rule 69)

	int            shift, and enter state 3
	real           shift, and enter state 4
	E              shift, and enter state 5
	PI             shift, and enter state 6
	PHI            shift, and enter state 7
	AVOGADRO       shift, and enter state 8
	'-'            shift, and enter state 9
	'('            shift, and enter state 10
	'!'            shift, and enter state 11
	'Math.sqrt'    shift, and enter state 12
	true           shift, and enter state 13
	false          shift, and enter state 14
	null           shift, and enter state 15
	var            shift, and enter state 74
	string         shift, and enter state 17
	if             shift, and enter state 18
	for            shift, and enter state 19
	function       shift, and enter state 20
	toString       shift, and enter state 21
	typeof         shift, and enter state 22
	print          shift, and enter state 23
	while          shift, and enter state 24
	match          shift, and enter state 25
	new            shift, and enter state 26
	this           shift, and enter state 27
	'['            shift, and enter state 28
	err            shift, and enter state 29
	isErr          shift, and enter state 30

	ForExprBody    goto state 47
	Expr           goto state 73

State 20

	Expr -> function . '(' var ')' '{' return Expr '}'    (rule 74)

	'('            shift, and enter state 72


State 21

	Expr -> toString . '(' Expr ')'                     (rule 70)

	'('            shift, and enter state 71


State 22

	Expr -> typeof . '(' Expr ')'                       (rule 71)

	'('            shift, and enter state 70


State 23

	Expr -> print . '(' Expr ')'                        (rule 81)

	'('            shift, and enter state 69


State 24

	Expr -> while . '(' Expr ')' '{' Expr '}'           (rule 76)

	'('            shift, and enter state 68


State 25

	Expr -> match . Expr '{' MatchCases '}'             (rule 82)

	int            shift, and enter state 3
	real           shift, and enter state 4
	E              shift, and enter state 5
	PI             shift, and enter state 6
	PHI            shift, and enter state 7
	AVOGADRO       shift, and enter state 8
	'-'            shift, and enter state 9
	'('            shift, and enter state 10
	'!'            shift, and enter state 11
	'Math.sqrt'    shift, and enter state 12
	true           shift, and enter state 13
	false          shift, and enter state 14
	null           shift, and enter state 15
	var            shift, and enter state 16
	string         shift, and enter state 17
	if             shift, and enter state 18
	for            shift, and enter state 19
	function       shift, and enter state 20
	toString       shift, and enter state 21
	typeof         shift, and enter state 22
	print          shift, and enter state 23
	while          shift, and enter state 24
	match          shift, and enter state 25
	new            shift, and enter state 26
	this           shift, and enter state 27
	'['            shift, and enter state 28
	err            shift, and enter state 29
	isErr          shift, and enter state 30

	Expr           goto state 67

State 26

	Expr -> new . cname '(' ExprList ')'                (rule 77)

	cname          shift, and enter state 66


State 27

	Expr -> this .                                      (rule 86)

	'+'            reduce using rule 86
	'-'            reduce using rule 86
	'*'            reduce using rule 86
	'/'            reduce using rule 86
	'('            reduce using rule 86
	')'            reduce using rule 86
	'%'            reduce using rule 86
	'=='           reduce using rule 86
	'**'           reduce using rule 86
	'>'            reduce using rule 86
	'<'            reduce using rule 86
	'<='           reduce using rule 86
	'>='           reduce using rule 86
	'!='           reduce using rule 86
	'&&'           reduce using rule 86
	'||'           reduce using rule 86
	';'            reduce using rule 86
	','            reduce using rule 86
	'.'            reduce using rule 86
	'{'            reduce using rule 86
	'}'            reduce using rule 86
	']'            reduce using rule 86
	'?'            reduce using rule 86
	':'            reduce using rule 86


State 28

	Expr -> '[' . ExprList ']'                          (rule 72)

	int            shift, and enter state 3
	real           shift, and enter state 4
	E              shift, and enter state 5
	PI             shift, and enter state 6
	PHI            shift, and enter state 7
	AVOGADRO       shift, and enter state 8
	'-'            shift, and enter state 9
	'('            shift, and enter state 10
	'!'            shift, and enter state 11
	'Math.sqrt'    shift, and enter state 12
	true           shift, and enter state 13
	false          shift, and enter state 14
	null           shift, and enter state 15
	var            shift, and enter state 16
	string         shift, and enter state 17
	if             shift, and enter state 18
	for            shift, and enter state 19
	function       shift, and enter state 20
	toString       shift, and enter state 21
	typeof         shift, and enter state 22
	print          shift, and enter state 23
	while          shift, and enter state 24
	match          shift, and enter state 25
	new            shift, and enter state 26
	this           shift, and enter state 27
	'['            shift, and enter state 28
	']'            reduce using rule 17
	err            shift, and enter state 29
	isErr          shift, and enter state 30

	ExprList       goto state 64
	Expr           goto state 65

State 29

	Expr -> err . '(' string ')'                        (rule 83)

	'('            shift, and enter state 63


State 30

	Expr -> isErr . '(' Expr ')'                        (rule 85)

	'('            shift, and enter state 62


State 31

	%start_parse -> Statement .                         (rule 0)

	%eof           accept


State 32

	Statement -> Type . var '=' Expr ';'                (rule 4)
	Type -> Type . '[' ']'                              (rule 23)

	var            shift, and enter state 60
	'['            shift, and enter state 61


State 33

	Statement -> var . '+=' Expr ';'                    (rule 9)
	Statement -> var . '-=' Expr ';'                    (rule 10)
	Statement -> var . '*=' Expr ';'                    (rule 11)
	Statement -> var . '/=' Expr ';'                    (rule 12)
	Statement -> var . '%=' Expr ';'                    (rule 13)
	Statement -> var . '++' ';'                         (rule 14)
	Statement -> var . '--' ';'                         (rule 15)
	Expr -> var .                                       (rule 48)
	Expr -> var . '=>' Expr                             (rule 73)

	'+'            reduce using rule 48
	'-'            reduce using rule 48
	'*'            reduce using rule 48
	'/'            reduce using rule 48
	'+='           shift, and enter state 52
	'-='           shift, and enter state 53
	'*='           shift, and enter state 54
	'/='           shift, and enter state 55
	'%='           shift, and enter state 56
	'--'           shift, and enter state 57
	'('            reduce using rule 48
	'%'            reduce using rule 48
	'=='           reduce using rule 48
	'**'           reduce using rule 48
	'>'            reduce using rule 48
	'<'            reduce using rule 48
	'<='           reduce using rule 48
	'>='           reduce using rule 48
	'!='           reduce using rule 48
	'&&'           reduce using rule 48
	'||'           reduce using rule 48
	';'            reduce using rule 48
	'=>'           shift, and enter state 58
	'.'            reduce using rule 48
	'}'            reduce using rule 48
	'?'            reduce using rule 48
	'++'           shift, and enter state 59


State 34

	Statement -> let . var '=' Expr ';'                 (rule 2)

	var            shift, and enter state 51


State 35

	Statement -> const . var '=' Expr ';'               (rule 3)

	var            shift, and enter state 50


State 36

	Statement -> for . ForBody                          (rule 8)
	Expr -> for . ForExprBody                           (rule 69)

	int            shift, and enter state 3
	real           shift, and enter state 4
	E              shift, and enter state 5
	PI             shift, and enter state 6
	PHI            shift, and enter state 7
	AVOGADRO       shift, and enter state 8
	'-'            shift, and enter state 9
	'('            shift, and enter state 10
	'!'            shift, and enter state 11
	'Math.sqrt'    shift, and enter state 12
	true           shift, and enter state 13
	false          shift, and enter state 14
	null           shift, and enter state 15
	var            shift, and enter state 49
	string         shift, and enter state 17
	if             shift, and enter state 18
	for            shift, and enter state 19
	function       shift, and enter state 20
	toString       shift, and enter state 21
	typeof         shift, and enter state 22
	print          shift, and enter state 23
	while          shift, and enter state 24
	match          shift, and enter state 25
	new            shift, and enter state 26
	this           shift, and enter state 27
	'['            shift, and enter state 28
	err            shift, and enter state 29
	isErr          shift, and enter state 30

	ForBody        goto state 46
	ForExprBody    goto state 47
	Expr           goto state 48

State 37
